--- a/docs/usecases/analyses.ipynb
+++ b/docs/usecases/analyses.ipynb
@@ -5,15 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data lineage of an AnnData object"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Background"
+    "# Manage interactive analyses (notebooks)"
    ]
   },
   {
