--- a/docs/usecases/analyses.ipynb
+++ b/docs/usecases/analyses.ipynb
@@ -1811,7 +1811,7 @@
     }
    ],
    "source": [
-    "file_subset.run.inputs.list(\"key\")"
+    "file_subset.run.input_files.list(\"key\")"
    ]
   },
   {
