📝 Updated all use cases with new API

--- a/docs/usecases/celltypist.ipynb
+++ b/docs/usecases/celltypist.ipynb
@@ -89,23 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💬 Loaded \u001b[1;92m1 Species record\u001b[0m that matched \u001b[1;92mname\u001b[0m: human\n",
+      "✅ Set species: Species(id=uHJU, name=human, taxon_id=9606, scientific_name=homo_sapiens, updated_at=2023-08-03 15:15:47, bionty_source_id=cVM6, created_by_id=kmvZDIX9)\n"
+     ]
+    }
+   ],
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import celltypist\n",
     "import pandas as pd\n",
     "\n",
-    "ln.settings.verbosity = 3  # show hints"
+    "ln.settings.verbosity = 3  # show hints\n",
+    "lb.settings.species = \"human\"  # globally set species"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💬 Notebook imports: celltypist==1.5.1 lamindb==0.49.0 lnschema_bionty==0.28.2 pandas==1.5.3\n",
+      "✅ Saved: Transform(id=s5mkN5NQ1ttIz8, name=Manage a cell type registry, short_name=celltypist, stem_id=s5mkN5NQ1ttI, version=0, type=notebook, updated_at=2023-08-03 15:25:12, created_by_id=kmvZDIX9)\n",
+      "✅ Saved: Run(id=rbVY9aVXTWFvZLcL7D19, run_at=2023-08-03 15:25:12, transform_id=s5mkN5NQ1ttIz8, created_by_id=kmvZDIX9)\n"
+     ]
+    }
+   ],
    "source": [
     "ln.track()"
    ]
@@ -162,7 +182,7 @@
     "celltypist_source_v2_url = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
     "\n",
     "# our source data\n",
-    "celltypist_file = ln.File.select(description=description).one_or_none()\n",
+    "celltypist_file = ln.File.filter(description=description).one_or_none()\n",
     "\n",
     "if celltypist_file is None:\n",
     "    celltypist_df = pd.read_excel(celltypist_source_v2_url)\n",
@@ -480,7 +500,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "records = set(records_names.values())\n",
@@ -529,7 +553,7 @@
    "source": [
     "for term in list(high_terms_umapped):\n",
     "    print(f\"Term: {term}\")\n",
-    "    print(celltype_bt.search(term).head(1))"
+    "    display(celltype_bt.search(term).head(1))"
    ]
   },
   {
@@ -595,7 +619,7 @@
    "metadata": {},
    "source": [
     "The previously added CellTypist ontology registry is now available in LaminDB.\n",
-    "To retrieve the full ontology table as a Pandas DataFrame we can use {func}`docs:lamindb.select`:"
+    "To retrieve the full ontology table as a Pandas DataFrame we can use {func}`docs:lamindb.filter`:"
    ]
   },
   {
@@ -604,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.select().df()"
+    "lb.CellType.filter().df()"
    ]
   },
   {
@@ -688,9 +712,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/opt/miniconda3/envs/py39/lib/python3.9/site-packages/celltypist/data/samples/sample_cell_by_gene.csv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_file = celltypist.samples.get_sample_csv()\n",
     "input_file"
@@ -698,9 +733,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📁 Input file is '/opt/miniconda3/envs/py39/lib/python3.9/site-packages/celltypist/data/samples/sample_cell_by_gene.csv'\n",
+      "⏳ Loading data\n",
+      "🔬 Input data has 559 cells and 32786 genes\n",
+      "🔗 Matching reference genes in the model\n",
+      "🧬 5313 features used for prediction\n",
+      "⚖️ Scaling input data\n",
+      "🖋️ Predicting labels\n",
+      "✅ Prediction done!\n",
+      "👀 Can not detect a neighborhood graph, will construct one before the over-clustering\n",
+      "⛓️ Over-clustering input data with resolution set to 5\n",
+      "🗳️ Majority voting the predictions\n",
+      "✅ Majority voting done!\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = celltypist.annotate(\n",
     "    input_file, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
@@ -717,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,9 +780,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predicted_labels</th>\n",
+       "      <th>over_clustering</th>\n",
+       "      <th>majority_voting</th>\n",
+       "      <th>conf_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cell_1</th>\n",
+       "      <td>Intermediate macrophages</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Age-associated B cells</td>\n",
+       "      <td>0.979577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_2</th>\n",
+       "      <td>Trm cytotoxic T cells</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Age-associated B cells</td>\n",
+       "      <td>0.073008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_3</th>\n",
+       "      <td>pDC</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Macrophages</td>\n",
+       "      <td>0.020744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_4</th>\n",
+       "      <td>Follicular B cells</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Age-associated B cells</td>\n",
+       "      <td>0.167273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_5</th>\n",
+       "      <td>Trm cytotoxic T cells</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Age-associated B cells</td>\n",
+       "      <td>0.430877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_555</th>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0.152075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_556</th>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0.901491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_557</th>\n",
+       "      <td>Tcm/Naive helper T cells</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0.092006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_558</th>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0.747148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell_559</th>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alveolar macrophages</td>\n",
+       "      <td>0.060108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>559 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  predicted_labels over_clustering         majority_voting  \\\n",
+       "Cell_1    Intermediate macrophages               3  Age-associated B cells   \n",
+       "Cell_2       Trm cytotoxic T cells               3  Age-associated B cells   \n",
+       "Cell_3                         pDC              13             Macrophages   \n",
+       "Cell_4          Follicular B cells              37  Age-associated B cells   \n",
+       "Cell_5       Trm cytotoxic T cells              37  Age-associated B cells   \n",
+       "...                            ...             ...                     ...   \n",
+       "Cell_555      Alveolar macrophages               4    Alveolar macrophages   \n",
+       "Cell_556      Alveolar macrophages               0    Alveolar macrophages   \n",
+       "Cell_557  Tcm/Naive helper T cells               4    Alveolar macrophages   \n",
+       "Cell_558      Alveolar macrophages               4    Alveolar macrophages   \n",
+       "Cell_559      Alveolar macrophages               0    Alveolar macrophages   \n",
+       "\n",
+       "          conf_score  \n",
+       "Cell_1      0.979577  \n",
+       "Cell_2      0.073008  \n",
+       "Cell_3      0.020744  \n",
+       "Cell_4      0.167273  \n",
+       "Cell_5      0.430877  \n",
+       "...              ...  \n",
+       "Cell_555    0.152075  \n",
+       "Cell_556    0.901491  \n",
+       "Cell_557    0.092006  \n",
+       "Cell_558    0.747148  \n",
+       "Cell_559    0.060108  \n",
+       "\n",
+       "[559 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "adata_annotated.obs"
    ]
@@ -784,7 +983,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated = ln.File(adata_annotated, description=\"Examplary CellTypist file\")"
+    "file_annotated = ln.File.from_anndata(\n",
+    "    adata_annotated, description=\"Examplary CellTypist file\", var_ref=lb.Gene.symbol\n",
+    ")"
    ]
   },
   {
@@ -801,7 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link cell types to the file record:"
+    "Add cell types as labels:"
    ]
   },
   {
@@ -810,7 +1011,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.cell_types.set(celltypes)"
+    "file_annotated.features.add_labels(celltypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_annotated.describe()"
    ]
   },
   {
@@ -827,7 +1037,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.select(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
+    "ln.File.filter(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
    ]
   },
   {
@@ -844,7 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.select(files__description__icontains=\"CellTypist\").df()"
+    "ln.Transform.filter(files__description__icontains=\"CellTypist\").df()"
    ]
   },
   {
@@ -866,10 +1076,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "!lamin delete celltypist"
+    "!lamin delete celltypist\n",
+    "!rm -r ./celltypist"
    ]
   }
  ],
