--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -600,7 +600,7 @@
    "metadata": {},
    "source": [
     "The previously added CellTypist ontology registry is now available in LaminDB.\n",
-    "To retrieve the full ontology table as a Pandas DataFrame we can use {func}`docs:lamindb.filter`:"
+    "To retrieve the full ontology table as a Pandas DataFrame we can use `.filter`:"
    ]
   },
   {
