--- a/docs/bioregistry/enrichr.ipynb
+++ b/docs/bioregistry/enrichr.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To register the pathways we make use of {func}`docs:lamindb.parse` to directly parse the annotated GO pathway ontology IDs into LaminDB."
+    "To register the pathways we make use of `.from_values` to directly parse the annotated GO pathway ontology IDs into LaminDB."
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, we use {func}`docs:lamindb.parse` for all Pathway associated genes to register them with LaminDB."
+    "Similarly, we use `.from_values` for all Pathway associated genes to register them with LaminDB."
    ]
   },
   {
@@ -704,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Querying for pathways is now simple with {func}`docs:lamindb.filter`:"
+    "Querying for pathways is now simple with `.filter`:"
    ]
   },
   {
@@ -817,7 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Registering pathways and associated gene sets is made simple with {func}`docs:lamindb.parse` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
+    "Registering pathways and associated gene sets is made simple with `.from_values` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
    ]
   },
   {
