--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -779,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a file record using {func}`docs:lamindb.File` of the AnnData object.\n",
+    "Create a file record of the AnnData object.\n",
     "We further define a name of the dataset for clarity that can also be queried for."
    ]
   },
