--- a/docs/bioregistry/enrichr.ipynb
+++ b/docs/bioregistry/enrichr.ipynb
@@ -563,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We further create a {func}`docs:lamindb.File` object to track the dataset."
+    "We further create a File object to track the dataset."
    ]
   },
   {
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We further create two {func}`docs:lamindb.Featureset` for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
+    "We further create two feature sets for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
    ]
   },
   {
@@ -817,7 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Registering pathways and associated gene sets is made simple with `.from_values` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
+    "Registering pathways and associated gene sets is made simple with `.from_values` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with FeatureSet to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
    ]
   },
   {
