💚 Turn into set

--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -429,18 +429,20 @@
    "outputs": [],
    "source": [
     "# a few tests\n",
-    "assert shared_markers.list(\"name\") == [\n",
-    "    \"Ccr7\",\n",
-    "    \"CD3\",\n",
-    "    \"Cd14\",\n",
-    "    \"Cd19\",\n",
-    "    \"CD127\",\n",
-    "    \"CD27\",\n",
-    "    \"CD28\",\n",
-    "    \"CD8\",\n",
-    "    \"Cd4\",\n",
-    "    \"CD57\",\n",
-    "]\n",
+    "assert set(shared_markers.list(\"name\")) == set(\n",
+    "    [\n",
+    "        \"Ccr7\",\n",
+    "        \"CD3\",\n",
+    "        \"Cd14\",\n",
+    "        \"Cd19\",\n",
+    "        \"CD127\",\n",
+    "        \"CD27\",\n",
+    "        \"CD28\",\n",
+    "        \"CD8\",\n",
+    "        \"Cd4\",\n",
+    "        \"CD57\",\n",
+    "    ]\n",
+    ")\n",
     "ln.File.filter(feature_sets__in=panels_with_cd14).exists()"
    ]
   },
