♻️ Also refactor cellmarker guide to pre-storage curation (#20)

--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -108,6 +108,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that many features aren't validated. Let's standardize the identifiers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.var.index = lb.CellMarker.bionty().map_synonyms(adata.var.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now things look much better, but we still have 5 CellMaker records that seem more like metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -115,7 +147,66 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)\n",
+    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, let's curate the AnnData a bit more:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspect_result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
+    "validated = inspect_result[\"mapped\"]\n",
+    "not_validated = inspect_result[\"not_mapped\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's move metadata into `adata.obs`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs = adata[:, not_validated].to_df()\n",
+    "adata = adata[:, validated]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have a clean panel of 45 CellMarkers and metadata that we don't want to register:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.save()"
    ]
   },
@@ -148,16 +239,78 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
     "adata2 = readfcs.read(ln.dev.datasets.file_fcs())\n",
     "file2 = ln.File.from_anndata(\n",
     "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata2.var.index = lb.CellMarker.bionty().map_synonyms(adata2.var.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2 = ln.File.from_anndata(\n",
+    "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata2.var.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 3 columns labeled with an empty space that are unvalidated, let's remove them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata2 = adata2[:, \" \" != adata2.var.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2 = ln.File.from_anndata(\n",
+    "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file2.save()"
    ]
   },
@@ -200,7 +353,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__cell_markers=cell_markers.cd14).df()"
+    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=cell_markers.cd14).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
    ]
   },
   {
@@ -216,8 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1 = ln.File.filter(feature_sets__cell_markers=cell_markers.cd14).all()[0]\n",
-    "file2 = ln.File.filter(feature_sets__cell_markers=cell_markers.cd14).all()[1]"
+    "file1 = ln.File.filter(feature_sets__in=panels_with_cd14).all()[0]\n",
+    "file2 = ln.File.filter(feature_sets__in=panels_with_cd14).all()[1]"
    ]
   },
   {
@@ -253,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df().head(10)"
+    "lb.CellMarker.filter().df()"
    ]
   },
   {
@@ -266,8 +428,34 @@
    },
    "outputs": [],
    "source": [
-    "# throw error if there is none\n",
-    "ln.File.filter(feature_sets__cell_markers=cell_markers.cd14).exists()\n",
+    "# a few tests\n",
+    "assert set(shared_markers.list(\"name\")) == set(\n",
+    "    [\n",
+    "        \"Ccr7\",\n",
+    "        \"CD3\",\n",
+    "        \"Cd14\",\n",
+    "        \"Cd19\",\n",
+    "        \"CD127\",\n",
+    "        \"CD27\",\n",
+    "        \"CD28\",\n",
+    "        \"CD8\",\n",
+    "        \"Cd4\",\n",
+    "        \"CD57\",\n",
+    "    ]\n",
+    ")\n",
+    "ln.File.filter(feature_sets__in=panels_with_cd14).exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "# clean up test instance\n",
     "!lamin delete test-flow\n",
     "!rm -r test-flow"
