--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -293,6 +293,19 @@
    "source": [
     "file.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "!lamin delete test-multimodal"
+   ]
   }
  ],
  "metadata": {
