♻️ Refactor multimodal and spatial (#21)

--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -213,6 +213,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're only interested in a single metadata column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature(name=\"gene_target\", type=\"category\").save()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -228,13 +244,6 @@
    "outputs": [],
    "source": [
     "file.features.add_feature_set(feature_set_obs, slot=\"obs\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'd also like to track a few metadata columns as labels:"
    ]
   },
   {
@@ -283,6 +292,19 @@
    "outputs": [],
    "source": [
     "file.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "!lamin delete test-multimodal"
    ]
   }
  ],
