🚚 Move add_labels from FeatureManager to Data

--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -817,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.features.add_labels(celltypes)"
+    "file_annotated.add_labels(celltypes)"
    ]
   },
   {
