--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], \"symbol\")\n",
-    "file.features.add_labels(gene_targets)"
+    "file.add_labels(gene_targets)"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.add_labels(labels)"
+    "file.add_labels(labels)"
    ]
   },
   {
