📝 Save to validate

--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -35,7 +35,7 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "ln.settings.verbosity = 3  # show hints\n",
+    "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
   },
@@ -163,9 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inspect_result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
-    "validated = inspect_result[\"mapped\"]\n",
-    "not_validated = inspect_result[\"not_mapped\"]"
+    "result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
+    "validated = result[\"validated\"]\n",
+    "not_validated = result[\"not_validated\"]"
    ]
   },
   {
