--- a/docs/datatype/60-bulkrna.ipynb
+++ b/docs/datatype/60-bulkrna.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curate & register bulk RNA-seq datasets"
+    "# Curate & link bulk RNA-seq datasets"
    ]
   },
   {
@@ -59,6 +59,15 @@
    "metadata": {},
    "source": [
     "## Curate the count matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.track()"
    ]
   },
   {
@@ -262,6 +271,15 @@
    "outputs": [],
    "source": [
     "ln.File.filter().df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curated_file.view_lineage()"
    ]
   },
   {
