--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage flow cytometry data"
+    "# Curate & link flow cytometry data"
    ]
   },
   {
@@ -34,7 +34,6 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
-    "\n",
     "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
@@ -312,6 +311,15 @@
    "outputs": [],
    "source": [
     "file2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.view_lineage()"
    ]
   },
   {
