--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage multi-modal data"
+    "# Curate & link multi-modal data"
    ]
   },
   {
@@ -291,6 +291,15 @@
    "outputs": [],
    "source": [
     "file.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_lineage()"
    ]
   },
   {
