--- a/docs/datatype/50-spatial.ipynb
+++ b/docs/datatype/50-spatial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage spatial data"
+    "# Curate & link spatial data"
    ]
   },
   {
