📝 Save to validate (#24)

--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -98,7 +98,7 @@
     "import celltypist\n",
     "import pandas as pd\n",
     "\n",
-    "ln.settings.verbosity = 3  # show hints\n",
+    "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
   },
@@ -801,6 +801,15 @@
    "outputs": [],
    "source": [
     "file_annotated.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(celltypes)"
    ]
   },
   {
