--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage flow cytometry data"
+    "# Curate & link flow cytometry data"
    ]
   },
   {
@@ -35,7 +35,6 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "ln.settings.verbosity = 3  # show hints\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
   },
@@ -163,9 +162,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inspect_result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
-    "validated = inspect_result[\"mapped\"]\n",
-    "not_validated = inspect_result[\"not_mapped\"]"
+    "result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
+    "validated = result[\"validated\"]\n",
+    "not_validated = result[\"not_validated\"]"
    ]
   },
   {
@@ -312,6 +311,15 @@
    "outputs": [],
    "source": [
     "file2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.view_lineage()"
    ]
   },
   {
