--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage multi-modal data"
+    "# Curate & link multi-modal data"
    ]
   },
   {
@@ -253,6 +253,7 @@
    "outputs": [],
    "source": [
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], \"symbol\")\n",
+    "ln.save(gene_targets)\n",
     "file.add_labels(gene_targets)"
    ]
   },
@@ -268,12 +269,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file.add_labels(labels)"
+    "Because none of these labels seem like something we'd want to track in the registry or validate, we don't link them to the file."
    ]
   },
   {
@@ -292,6 +291,15 @@
    "outputs": [],
    "source": [
     "file.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_lineage()"
    ]
   },
   {
