--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -739,11 +739,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's rename the column with predictions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_annotated.obs.rename(\n",
+    "    columns={\"predicted_labels\": \"cell_type_cell_typist\"}, inplace=True\n",
+    ")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create cell type records using the \"predicted_labels\" as names:"
+    "Create cell type records:"
    ]
   },
   {
@@ -753,7 +771,7 @@
    "outputs": [],
    "source": [
     "celltypes = lb.CellType.from_values(\n",
-    "    adata_annotated.obs.predicted_labels, lb.CellType.name\n",
+    "    adata_annotated.obs.cell_type_cell_typist, lb.CellType.name\n",
     ")"
    ]
   },
@@ -817,7 +835,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add cell types as labels:"
+    "Add cell types as labels for a feature `\"cell_type_cell_typist\"`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature(name=\"cell_type_cell_typist\", type=\"category\").save()"
    ]
   },
   {
