--- a/docs/datatype/60-bulkrna.ipynb
+++ b/docs/datatype/60-bulkrna.ipynb
@@ -45,11 +45,11 @@
     "# pretned we're running a bulk RNA-seq pipeline\n",
     "ln.track(ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\"))\n",
     "# create a directory for its output\n",
-    "Path(\"./bulkrna/output_dir\").mkdir(exist_ok=True)\n",
+    "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
     "# get the count matrix\n",
     "path = ln.dev.datasets.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts()\n",
     "# move it into the output directory\n",
-    "path = path.rename(f\"./bulkrna/output_dir/{path.name}\")\n",
+    "path = path.rename(f\"./test-bulkrna/output_dir/{path.name}\")\n",
     "# register it\n",
     "ln.File(path, description=\"Merged Bulk RNA counts\").save()"
    ]
@@ -295,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin delete test-bulkrna"
+    "!lamin delete test-bulkrna\n",
+    "!rm -r test-bulkrna"
    ]
   }
  ],
