--- a/docs/bioregistry/celltypist.ipynb
+++ b/docs/bioregistry/celltypist.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "# Filter warnings from celltypist\n",
+    "# filter warnings from celltypist\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", message=\".*The 'nopython' keyword.*\")"
@@ -97,7 +97,6 @@
     "import lnschema_bionty as lb\n",
     "import celltypist\n",
     "import pandas as pd\n",
-    "\n",
     "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
@@ -639,6 +638,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See cell type hierarchy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_lookup.memory_b_cell.view_parents()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -863,6 +878,15 @@
    "outputs": [],
    "source": [
     "file_annotated.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_annotated.view_lineage()"
    ]
   },
   {
