--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -162,16 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
-    "validated = result[\"validated\"]\n",
-    "not_validated = result[\"not_validated\"]"
+    "validated = lb.CellMarker.bionty().validate(adata.var.index, \"name\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's move metadata into `adata.obs`:"
+    "Let's move metadata (non-validated cell markers) into `adata.obs`:"
    ]
   },
   {
@@ -180,8 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs = adata[:, not_validated].to_df()\n",
-    "adata = adata[:, validated]"
+    "adata.obs = adata[:, ~validated].to_df()\n",
+    "adata = adata[:, validated].copy()"
    ]
   },
   {
