--- a/docs/datatype/60-bulkrna.ipynb
+++ b/docs/datatype/60-bulkrna.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin init --storage test-bulkrna --schema bionty"
@@ -292,7 +296,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin delete test-bulkrna\n",
