--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out the first 10 rows of the CellMarker table:"
+    "Check out your CellMarker registry:"
    ]
   },
   {
