--- a/docs/datatype/40-multimodal.ipynb
+++ b/docs/datatype/40-multimodal.ipynb
@@ -24,9 +24,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
