--- a/docs/datatype/60-bulkrna.ipynb
+++ b/docs/datatype/60-bulkrna.ipynb
@@ -43,7 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# pretned we're running a bulk RNA-seq pipeline\n",
