🚑️ Enable to run on new API

--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "result = lb.CellMarker.bionty().inspect(adata.var.index, \"name\")\n",
     "validated = result[\"validated\"]\n",
-    "not_validated = result[\"not_validated\"]"
+    "not_validated = result[\"non_validated\"]"
    ]
   },
   {
