--- a/docs/datatype/60-bulkrna.ipynb
+++ b/docs/datatype/60-bulkrna.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin init --storage test-bulkrna --schema bionty"
@@ -39,7 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# pretned we're running a bulk RNA-seq pipeline\n",
@@ -292,7 +300,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin delete test-bulkrna\n",
