📝 Updated flow nb

--- a/docs/datatype/30-flow.ipynb
+++ b/docs/datatype/30-flow.ipynb
@@ -272,42 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata2.var.index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are 3 columns labeled with an empty space that are unvalidated, let's remove them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata2 = adata2[:, \" \" != adata2.var.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file2 = ln.File.from_anndata(\n",
-    "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "file2.save()"
    ]
   },
@@ -384,8 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1 = ln.File.filter(feature_sets__in=panels_with_cd14).all()[0]\n",
-    "file2 = ln.File.filter(feature_sets__in=panels_with_cd14).all()[1]"
+    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
+    "file1, file2 = files[0], files[1]"
    ]
   },
   {
